# grokking

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
note/: Grokking-issue.md  _quarto.yml  grokking-delay-proof.qmd  index.qmd  refs.bib
scripts/: plot_results.py  run_single.py  run_sweep.py
src/grokking/: __init__.py  data.py  metrics.py  model.py  sweep.py  train.py  viz.py
